# inviwo

./: .gitignore  .gitmodules  appveyor.yml
data/workspaces/: boron-interop.inv  boron-vr.inv
include/inviwo/core/properties/: property.h  propertyowner.h
modules/spout/: CMakeLists.txt  depends.cmake  readme.md  spoutmodule.cpp  spoutmodule.h  spoutmoduledefine.h
modules/spout/ext/: SpoutGLDXinterop.h
modules/spout/processors/: spoutprocessor.cpp  spoutprocessor.h
modules/zmq/: CMakeLists.txt  readme.md  zmqmodule.cpp  zmqmodule.h  zmqmoduledefine.h
modules/zmq/processors/: zmqprocessor.cpp  zmqprocessor.h  zmqvolumeboxpublisher.cpp  zmqvolumeboxpublisher.h
resources/: changelog.html
